# cs3540-final

./: .gitignore  Makefile  README.md  exploration.ipynb  main.ipynb  pyproject.toml  results.ipynb  test.ipynb
results/: cnn_history.json  cnn_pca_report.json  cnn_pca_report.txt  cnn_report.json  cnn_report.txt  lgbm_report.json  lgbm_report.txt  logistic_report.json  logistic_report.txt  mlp_history.json  mlp_pca_report.json  mlp_pca_report.txt  mlp_report.json  mlp_report.txt  rf_report.json  rf_report.txt  training_times.json
src/app/: app.py
src/app/pages/: demo.py  models.py  pca.py
src/data/: cleaner.py  loader.py  resampler.py
src/models/: __init__.py  cnn.py  cnn_random_search.py  evaluation.py  lgbm.py  logistic.py  mlp.py  model_zoo_benchmark.py  rf.py
src/visualization/: data_visualization.py
