[project]
name = "cs3540-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "imblearn>=0.0",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "keras>=3.14.0",
    "lightgbm>=4.0.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.0rc1",
    "numpy>=2.0.2",
    "pandas>=3.0.2",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow==2.19.0",
]

[tool.pyright]
venvPath='.'
venv=".venv"
exclude=['.venv']

[tool.uv]
environments = ["sys_platform == 'darwin' or sys_platform == 'linux'"]
override-dependencies = [
    "pandas>=3.0.1",
]
